--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CardReto</title>
-    <link rel="stylesheet" href="../Estilos/style.css">
+    <link rel="stylesheet" href="./Estilos/style.css">
 </head>
 <body>
     <article class="card">
         <figure class="card__figure">
-            <img class="card__character" src="\assets\img\archer.png" alt="Aqui va una imagen">
+            <img class="card__character" src=".\assets\img\archer.png" alt="Aqui va una imagen">
         </figure>
 
         <div class="card__text">
