Cambios que no me acuerdo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Estilos/style.css">
 </head>
 <body>
-    <article class="card">
+    <article class="card__arquera">
         <figure class="card__figure">
             <img class="card__character" src=".\assets\img\archer.png" alt="Aqui va una imagen">
         </figure>
